Fix broken CSS rule.

--- a/public/_static/page.css
+++ b/public/_static/page.css
@@ -113,7 +113,7 @@ a:hover {
 
 main {
 	margin: auto;
-	max-width: 46rem;border-radius
+	max-width: 46rem;
 }
 
 p, dl {
